# education-platform

./: README.md  整体框架.md
RuoYi-Vue-backend/: README-启动说明.md  pom.xml  start.bat  启动Redis.bat
RuoYi-Vue-backend/zhiyu/: pom.xml  student_permission_assign.sql  student_permission_init.sql
RuoYi-Vue3-fronted/: .env.development  .env.production
ai_service/: .env  README-启动说明.md  database.py  main.py  pyproject.toml  start_rag.bat  start_rag.ps1
ai_service/chroma_db/: chroma.sqlite3
ai_service/data/: StudentPerformanceFactors_test_1770877488.xlsx  contacts.xlsx  education_knowledge_base.xlsx  education_knowledge_base_1770649374.xlsx  education_knowledge_base_1770653686.xlsx  education_knowledge_base_1771851049.xlsx
ai_service/models/: encoders.save  scaler.save
ai_service/models/student_performance_model/: fingerprint.pb
ai_service/models/student_performance_model/variables/: variables.data-00000-of-00001
ai_service/qdrant_db/collection/excel_data/: storage.sqlite
backend/: README-启动说明.md  start.ps1
backend/ruoyi-admin/: pom.xml
deploy/sql/: README.md  schema.sql  seed.sql
frontend/: .env.staging  index.html  vite.config.js
frontend/src/router/: index.js
frontend/src/views/: index.vue  login.vue
rag/: README-启动说明.md  models.py  prediction_service.py  rag_service.py  ~$education_knowledge_base.xlsx
rag/chroma_db/: chroma.sqlite3
rag/data/: StudentPerformanceFactors_test_1770653468.xlsx  contacts_1770652690.xlsx  education_knowledge_base_1770647517.xlsx
rag/models/student_performance_model/: keras_metadata.pb  saved_model.pb
(+26 files in other folders)
